--- a/themes/mitt_tema/css/style.css
+++ b/themes/mitt_tema/css/style.css
@@ -1,8 +1,5 @@
 * {
     box-sizing: border-box;
-    border: 0 none;
-    margin: 0;
-    padding: 0;
 }
 
 ol, ul {
@@ -10,50 +7,61 @@ ol, ul {
 }
 
 .hidden {
-    display: none !important;
+    display: none;
 }
 
 html, body {
     height: 100%;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    line-height: 1.6;
+    color: #333;
+    background-color: #fff;
 }
-
-/* Placement */
 
 body {
     display: flex;
     flex-direction: column;
+    max-width: 80%;
+    margin: auto;
 }
 
 .main {
-    flex: 1 0 auto;
+    flex: 1;
 }
 
 .header, .footer {
-    flex: 0 0 auto;
-}
-
-/* Header */
-
-.header, .site-header {
+    padding: 1rem;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
-/* Title */
+.header, .site-header {
+    border-bottom: 1px solid #eaeaea;
+}
+
+img {
+    max-width: 50%;
+    height: auto;
+}
 
 .title, .logo {
-    padding: 3em 3em 3em 0;
+    padding: 2rem 0;
+    display: inline-block;
+    width: 200px;
+    max-width: 100%;
+    height: auto;
 }
 
 @media (max-width: 767px) {
     .title, .logo {
-        padding: 1em 1em 1em 0;
+        padding: 1rem 0;
     }
     .title {
-        min-width: 50%;
+        flex: 1;
     }
     .logo {
-        max-width: 30%;
+        flex-basis: 100px;
     }
 }
 
@@ -65,43 +73,27 @@ body {
     font-style: italic;
 }
 
-/* Footer */
-
 .footer {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid #222;
+    border-top: 1px solid #eaeaea;
 }
 
 .footer a {
-    color: #222;
+    color: #888;
+    text-decoration: none;
 }
 
 .footer .social {
-    font-size: 2rem;
-}
-
-/* Typografy */
-
-body {
-    font-family: sans-serif;
-    line-height: 1.5rem;
-    color: #444;
+    font-size: 1.5rem;
 }
 
 p, td, th, li, dd {
-    text-align: justify;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
+    text-align: left;
 }
 
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.6em;
-    font-weight: bold;
-}
-
-img {
-    max-width: 100%;
+    font-weight: 600;
+    text-align: center;
 }
 
 /* BELOW ARE PREPARED STYLES FOR CODE/PRE/BLOCKQUOTE, FEEL FREE TO REMOVE IT  */
