--- a/themes/mitt_tema/index.twig
+++ b/themes/mitt_tema/index.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ meta.title }} - {{ config.site_title }}</title>
     <link rel="stylesheet" href="{{ theme_url }}/css/style.css">
-    <link rel="icon" type="image/png" href="{{ base_url }}/assets/img/leaf_256x256.png">
+    <link rel="icon" type="image/png" href="{{ assets_url }}/img/leaf_256x256.png">
 </head>
 
 {% include 'incl/header.twig' %}
