--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -10,3 +10,4 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'code';
 @import 'base';
 @import 'responsive';
+@import 'technologies';
