--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -4,7 +4,7 @@
             https://github.com/theswedishpolyglot/webbprogrammering-bth-design
         </p>
     </div>
-    <div class="container">
+    <div class="container" style="text-align: center;">
         <div class="social">
             {% for social in pages["_meta"].meta.social %}
                 <a href="{{ social.url }}" title="{{ social.title }}" role="button">
@@ -13,8 +13,11 @@
                 </a>
             {% endfor %}
         </div>
-        <p>
-            En footer med lite text.
+        <p style="text-align: center;">
+            <i class="fas fa-code"></i> Logic
+            <i class="fas fa-paint-brush"></i> Style
+            <i class="fas fa-bug"></i> Robustness
+            </br></br>
         </p>
     </div>
 </div>
