--- a/themes/kmom02/scss/base.scss
+++ b/themes/kmom02/scss/base.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-family;
     background-color: $background-color;
     color: $font-color;
     line-height: 1.6;
