--- a/themes/kmom02/scss/technologies.scss
+++ b/themes/kmom02/scss/technologies.scss
@@ -80,7 +80,7 @@
 
 .technology-page-container .sidebar a {
     display: block;
-    color: #818181;
+    color: $nav-button;
     padding: 10px;
     text-decoration: none;
 
