--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,6 +1,14 @@
-$font-color: #e0e0e0;
+$font-family: 'Roboto', sans-serif;
+$font-color: #000;
 $font-alternative-color: #0F0;
 $accent-color: #0F0;
-$background-color: #000;
-$background-alternative-color: #121212;
-$border-color: #333;
+$nav-button: #818181;
+$background-color: #7D997D;
+$background-alternative-color: #3F663F;
+$border-color: #153315;
+
+$theme-1: #0F0;
+$theme-2: #7D997D;
+$theme-3: #94FF94;
+$theme-4: #3F663F;
+$theme-5: #153315;
