--- a/themes/kmom02/incl/header.twig
+++ b/themes/kmom02/incl/header.twig
@@ -14,9 +14,14 @@
     <link rel="canonical" href="{{ current_page.url }}" />
     {% endif %}
     <link rel="icon" type="image/png" href="{{ assets_url }}/img/leaf_256x256.png">
-    <link rel="stylesheet" href="{{ base_url }}/themes/kmom02/css/style.css">
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
     <link rel="stylesheet" href="{{ theme_url }}/../shared/css/font-awsome.min.css" type="text/css" />
     <link rel="stylesheet" href="{{ theme_url }}/css/mobile-menu.css" type="text/css" />
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    
+    
+    {% if config.session.theme == "dark" %}
+    <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.min.css" type="text/css" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css" />
+    {% endif %}
 </head>
