--- a/themes/kmom02/scss/base.scss
+++ b/themes/kmom02/scss/base.scss
@@ -22,7 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
     color: $font-color;
-    text-shadow: 0 0 3px $accent-color;
+    text-shadow: 0 0 3px $h-border-color;
     text-align: center;
 }
 
