--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -2,7 +2,9 @@ $font-family: 'Roboto', sans-serif;
 $font-color: #e0e0e0;
 $font-alternative-color: #0F0;
 $accent-color: #0F0;
+$h-border-color:#0F0;
 $background-color: #000;
 $background-alternative-color: #121212;
 $border-color: #333;
 $nav-button: #818181;
+$box-color: #595959
