--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,11 +1,14 @@
 $font-family: 'Roboto', sans-serif;
 $font-color: #000;
-$font-alternative-color: #0F0;
-$accent-color: #0F0;
+$font-alternative-color: #054205;
+$accent-color: #054205;
+$h-border-color: #CADDCA;
 $nav-button: #818181;
-$background-color: #7D997D;
+$background-color: #CADDCA;
+
 $background-alternative-color: #3F663F;
 $border-color: #153315;
+$box-color: #CADDCA;
 
 $theme-1: #0F0;
 $theme-2: #7D997D;
