--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -11,6 +11,4 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'base';
 @import 'responsive';
 @import 'technologies';
-
-
-
+@import 'gallery';
