--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -11,6 +11,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'base';
 @import 'responsive';
 @import 'technologies';
+@import 'gallery';
 
 .nav a, .nav-toggle {
     color: #153315;
