--- a/themes/kmom02/scss/technologies.scss
+++ b/themes/kmom02/scss/technologies.scss
@@ -76,6 +76,7 @@
     grid-area: sidebar;
     padding: 20px;
     background-color: transparent;
+    max-width: 400px;
 }
 
 .technology-page-container .sidebar a {
@@ -92,6 +93,7 @@
 .technology-page-container .content {
     grid-area: content;
     padding: 0 20px;
+    max-width: 800px;
 }
 
 @media (max-width: 600px) {
