--- a/themes/kmom02/analyses.twig
+++ b/themes/kmom02/analyses.twig
@@ -1,6 +1,5 @@
 {% include 'incl/header.twig' %}
-
-<body>
+<html lang="{{ meta.lang ?? config.theme_config.lang }}"><body>
     {% include 'incl/nav.twig' %}
 
     <div class="main" role="main">
