--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -12,3 +12,4 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'responsive';
 @import 'technologies';
 @import 'gallery';
+@import 'kmom06_dark';
