--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -12,6 +12,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'responsive';
 @import 'technologies';
 @import 'gallery';
+@import 'kmom06';
 
 .nav a, .nav-toggle {
     color: #153315;
