--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,4 +1,6 @@
-$font-family: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+$font-family: 'Roboto Mono', monospace;
 $font-color: #000;
 $font-alternative-color: #054205;
 $accent-color: #054205;
