--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6,6 +6,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -6459,9 +6460,9 @@ pre code {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Mono", monospace;
   background-color: #000;
-  color: #e0e0e0;
+  color: #00FF41;
   line-height: 1.6;
   margin: auto;
   padding: 0;
@@ -6481,23 +6482,23 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
-  color: #e0e0e0;
-  text-shadow: 0 0 3px #0F0;
+  color: #00FF41;
+  text-shadow: 0 0 3px #00FF41;
   text-align: center;
 }
 
 a {
-  color: #0F0;
+  color: #00FF41;
   text-decoration: none;
 }
 a:hover {
   text-decoration: underline;
-  color: #0F0;
+  color: #00FF41;
 }
 
 button {
   font-family: "Roboto", sans-serif;
-  background-color: #0F0;
+  background-color: #00FF41;
   color: #000;
   padding: 0.5em 1em;
   border-radius: 0.25em;
@@ -6505,7 +6506,7 @@ button {
   transition: background-color 0.3s ease;
 }
 button:hover {
-  border-color: #e0e0e0;
+  border-color: #00FF41;
 }
 
 *,
@@ -6526,7 +6527,7 @@ img {
 }
 
 .logo {
-  width: 150px;
+  width: 250px;
   max-width: 100%;
   max-height: 100%;
   height: 50px;
@@ -6552,7 +6553,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li, figure, figcaption {
 
 input, textarea, select {
   background-color: #121212;
-  color: #e0e0e0;
+  color: #00FF41;
   border: 1px solid #333;
 }
 
@@ -6563,8 +6564,8 @@ input, textarea, select {
 }
 
 .sheet {
-  width: 100%;
-  height: 200px;
+  width: 600px;
+  height: 300px;
 }
 
 @media (max-width: 400px) {
@@ -6722,6 +6723,7 @@ input, textarea, select {
   grid-area: sidebar;
   padding: 20px;
   background-color: transparent;
+  max-width: 400px;
 }
 
 .technology-page-container .sidebar a {
@@ -6731,12 +6733,13 @@ input, textarea, select {
   text-decoration: none;
 }
 .technology-page-container .sidebar a:hover {
-  color: #0F0;
+  color: #00FF41;
 }
 
 .technology-page-container .content {
   grid-area: content;
   padding: 0 20px;
+  max-width: 800px;
 }
 
 @media (max-width: 600px) {
@@ -6821,5 +6824,35 @@ body {
   .gallery-container {
     grid-template-columns: 1fr;
     max-width: 300px;
+  }
+}
+.green-line {
+  width: 550%;
+  height: auto;
+  position: static;
+  padding-left: 200%;
+  margin: 0;
+}
+
+.line-container {
+  position: relative;
+  width: 100%;
+  height: 50px;
+}
+
+.line-container::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 4px;
+  background-color: #00FF41;
+  width: 0;
+  animation: drawLine 2s ease forwards;
+}
+
+@keyframes drawLine {
+  to {
+    width: 100%;
   }
 }
