--- a/themes/kmom02/technology.twig
+++ b/themes/kmom02/technology.twig
@@ -1,5 +1,5 @@
 {% include 'incl/header.twig' %}
-
+<html lang="{{ meta.lang ?? config.theme_config.lang }}">
 <body>
     {% include 'incl/nav.twig' %}
 
